# rules_semiwrap

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  defs.bzl  requirements.txt
.github/workflows/: bazel.yml
requirement_locks/3.10/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt
requirement_locks/3.11/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt
requirement_locks/3.12/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt
requirement_locks/3.13/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt
requirement_locks/3.9/: BUILD.bazel  requirements_lock.txt  requirements_windows.txt
rules_semiwrap/debug/: HACK_fix_pypi.py  backup_pkgconf.py
rules_semiwrap/private/: BUILD.bazel  hatch_nativelib_helpers.bzl  make_pyi_wrapper.py  native_lib_helpers.bzl  pybind_rules.bzl  pytest_util.bzl  render_native_pc.py  semiwrap_helpers.bzl  wheel_helper.bzl  wrapper.py
rules_semiwrap/private/hatchlib_native_port/: BUILD.bazel  config.py  generate_native_lib_files.py  validate.py
rules_semiwrap/semiwrap_headers/: BUILD.bazel
rules_semiwrap/tools/: BUILD.bazel  bazelify_project.py  generate_build_file.py  generate_nativelib_build_file.py  render_build_file.py
