exports_files(["requirements.txt"])

alias(
    name = "semiwrap_casters",
    actual = "//rules_semiwrap/semiwrap_headers:semiwrap_casters",
    visibility = ["//visibility:public"],
)

alias(
    name = "semiwrap_headers",
    actual = "//rules_semiwrap/semiwrap_headers:semiwrap_headers",
    visibility = ["//visibility:public"],
)

alias(
    name = "wrapper",
    actual = "//rules_semiwrap/private:wrapper",
    visibility = ["//visibility:public"],
)

alias(
    name = "make_pyi_wrapper",
    actual = "//rules_semiwrap/private:make_pyi_wrapper",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_native_libinit",
    actual = "//rules_semiwrap/private:render_native_libinit",
    visibility = ["//visibility:public"],
)
