load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# bazel run //:requirements.update / bazel test //:requirements_test
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    python_version = "3.11",
    requirements_in = "//:requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    requirements_windows = ":requirements_windows.txt",
    tags = ["no-systemcore"],
)
