load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_semiwrap_pip_deps//:requirements.bzl", "requirement")

exports_files(["make_pyi_wrapper.py"])

py_binary(
    name = "wrapper",
    srcs = ["wrapper.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("semiwrap")],
)

py_binary(
    name = "render_native_libinit",
    srcs = ["render_native_libinit.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "render_native_pc",
    srcs = ["render_native_pc.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("semiwrap")],
)
