load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_semiwrap_pip_deps//:requirements.bzl", "requirement")

py_binary(
    name = "generate_build_file",
    srcs = ["generate_build_file.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("semiwrap"), requirement("jinja2")],
    data = ["generated_build_info.bzl.jinja2"]
)
